<resources>
    <string name="app_name">Feather Finder</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="location">Location</string>
    <string name="bird_name">Bird Name</string>
    <string name="bird_count">Bird Count</string>
    <string name="description">Description</string>
    <string name="upload_image">Upload Image</string>
    <string name="submit">Submit</string>
    <string name="account">Account</string>
    <string name="achievements">Achievements</string>
    <string name="preferences">Preferences</string>
</resources>