<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="40dp"
        android:text="New Observation"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textAlignment="center"
                android:background="@drawable/orange_button"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_gravity="center"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:background="@drawable/light_grey_background"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/bird_name"
                android:textAlignment="center"
                android:background="@drawable/orange_button"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:background="@drawable/light_grey_background"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/bird_count"
                android:textAlignment="center"
                android:background="@drawable/orange_button"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:background="@drawable/light_grey_background"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textAlignment="center"
                android:background="@drawable/orange_button"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:textAlignment="center"
                android:background="@drawable/light_grey_background"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/upload_image"
                android:textAlignment="center"
                android:background="@drawable/orange_button"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"/>

            <ImageView
                android:id="@+id/newobservation_upload_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/orangeupload" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/submit"
                android:textSize="30sp"
                app:cornerRadius="10dp"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/orange"
                />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:srcCompat="@drawable/greysettings" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:srcCompat="@drawable/orangexplore" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/greyeye" />
</androidx.constraintlayout.widget.ConstraintLayout>