<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="135dp"
        android:text="Settings"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/user"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            android:background="@drawable/orange_button"
            android:text="@string/account"/>

            <TextView
                android:layout_width="200dp"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:text="@string/username"/>
        </LinearLayout>
</LinearLayout>
            <TextView
                android:layout_width="300dp"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_marginTop="30dp"
                android:background="@drawable/orange_button"
                android:text="@string/achievements"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="55dp"
                    android:src="@drawable/redbirdgrey"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/orangebirdgrey"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/greenbirdgrey"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="55dp"
                    android:src="@drawable/bluebirdgrey"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/lightpurplebirdgrey"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/purplebirdgrey"/>

            </LinearLayout>

            <TextView
                android:layout_width="300dp"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_marginTop="30dp"
                android:background="@drawable/orange_button"
                android:text="@string/preferences"/>

            <TextView
                android:layout_width="300dp"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:layout_marginTop="30dp"
                android:text="Show Distance In"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/orange"
                android:layout_marginStart="100dp"
                android:text="KM"/>
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/material_on_primary_disabled"
                android:text="M"/>
        </LinearLayout>

            <TextView
                android:layout_width="300dp"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:layout_marginTop="30dp"
                android:text="Maximum Distance"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:text="10km"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">
                <SeekBar
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>

                    </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:text="100km"/>

                    </LinearLayout>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Update"
                android:textSize="30sp"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/orange"
                app:cornerRadius="10dp"
                />


        </LinearLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:srcCompat="@drawable/greyexplore" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:srcCompat="@drawable/orangsettings" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/greyeye" />
</androidx.constraintlayout.widget.ConstraintLayout>